[package]
name = "fluffy-dollop"
version = "0.1.0"
authors = ["alice <alice@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat2 = "0.9.1"
pnet = "0.28.0"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.67"
serde_yaml = "0.8.20"
